@@ -12,11 +12,11 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.client.RestTemplate;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import java.util.List;
 import com.DraftLeague.repositories.UserRepository;
 
 import lombok.RequiredArgsConstructor;
-import com.DraftLeague.models.user.User;
-import com.DraftLeague.repositories.UserRepository;
 
 @Configuration
 @RequiredArgsConstructor
@@ -46,10 +46,13 @@ public class ApplicationConfig {
     @Bean
     public UserDetailsService userDetailsService() {
         return username -> userRepository.findUserByUsername(username)
-                .map(u -> new org.springframework.security.core.userdetails.User(
-                        u.getUsername(),
-                        u.getPassword(),
-                        java.util.Collections.emptyList()))
+                .map(u -> {
+                    String role = u.getRole() != null ? u.getRole() : "USER";
+                    return new org.springframework.security.core.userdetails.User(
+                            u.getUsername(),
+                            u.getPassword(),
+                            List.of(new SimpleGrantedAuthority("ROLE_" + role)));
+                })
                 .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
     }
 
